--- a/_config.yml
+++ b/_config.yml
@@ -36,8 +36,8 @@ event:
   location:    "Mill Bay, BC, Canada"
 
   trust_badge:
-    year:   "2017"  # season year
-    region: "eu"    # "na" or "eu"
+    year:   "2019"  # season year
+    region: "na"    # "na" or "eu"
     color:  "white" # "white", "black", "gray", "red", "blue" or "yellow"
 
   hero:
